Runnable scaffold for storybook

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,3 +1,6 @@
 <script>
   window.global = window;
+
+  // Workaround for global game object
+  const game = {i18n: {localize: (str) => str}};
 </script>
